# audiplayer

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
config/: default.toml  example.toml
src/: macros.rs  main.rs
src/core/: action.rs  event_loop.rs  mod.rs  mode.rs  settings.rs  state.rs
src/core/handlers/: keys.rs  mod.rs  now_playing.rs  playback.rs  plugin.rs  search.rs  ui.rs
src/player/: mod.rs  mpv.rs
src/plugins/: bandcamp.rs  mod.rs  traits.rs  youtube.rs
src/tui/: events.rs  mod.rs  theme.rs  ui.rs
