[package]
name = "audiplayer"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
ratatui = "0.30"
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
anyhow = "1"
serde_json = "1.0.149"
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
urlencoding = "2.1.3"
libc = "0.2.182"
